Add report Service